--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@vtrbo/eslint-config": "*",
+    "@vtrbo/eslint-config": "0.0.6",
     "bumpp": "^8.2.1",
-    "eslint": "^8.20.0",
+    "eslint": "^8.21.0",
     "eslint-plugin-vtrbo": "workspace:*",
     "typescript": "^4.7.4"
   }
