--- a/package.json
+++ b/package.json
@@ -2,19 +2,25 @@
   "name": "@vtrbo/eslint-config-monorepo",
   "version": "0.0.7",
   "private": true,
-  "packageManager": "pnpm@7.1.0",
-  "author": "Victor Bo<vtrbo.qq.com> (https://github.com/vtrbo)",
+  "description": "Victor Bo's Eslint Config",
+  "author": {
+    "name": "Victor Bo",
+    "email": "hi@vtrbo.cn"
+  },
   "license": "MIT",
+  "homepage": "https://github.com/vtrbo/eslint-config",
   "scripts": {
     "lint": "eslint .",
     "prepare": "pnpm -r run stub",
     "release": "bumpp package.json packages/*/package.json --commit --push --tag && pnpm -r publish --access public"
   },
   "devDependencies": {
-    "@vtrbo/eslint-config": "0.0.6",
+    "@vtrbo/eslint-config": "*",
     "bumpp": "^8.2.1",
-    "eslint": "^8.22.0",
+    "eslint": "^8.27.0",
     "eslint-plugin-vtrbo": "workspace:*",
-    "typescript": "^4.7.4"
+    "pnpm": "^7.16.1",
+    "rimraf": "^3.0.2",
+    "typescript": "^4.9.3"
   }
 }
