--- a/packages/basic/package.json
+++ b/packages/basic/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@vtrbo/eslint-config-basic",
   "version": "0.0.7",
-  "description": "",
-  "author": "Victor Bo<vtrbo.qq.com> (https://github.com/vtrbo)",
+  "description": "Victor Bo's Eslint Config",
+  "author": {
+    "name": "Victor Bo",
+    "email": "hi@vtrbo.cn"
+  },
   "license": "MIT",
   "homepage": "https://github.com/vtrbo/eslint-config",
   "keywords": [
@@ -19,17 +22,18 @@
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
     "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsonc": "^2.3.1",
+    "eslint-plugin-jsonc": "^2.5.0",
     "eslint-plugin-markdown": "^3.0.0",
-    "eslint-plugin-n": "^15.2.4",
-    "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-unicorn": "^43.0.2",
+    "eslint-plugin-n": "^15.5.1",
+    "eslint-plugin-no-only-tests": "^3.1.0",
+    "eslint-plugin-promise": "^6.1.1",
+    "eslint-plugin-unicorn": "^44.0.2",
     "eslint-plugin-vtrbo": "workspace:*",
-    "eslint-plugin-yml": "^1.1.0",
+    "eslint-plugin-yml": "^1.2.0",
     "jsonc-eslint-parser": "^2.1.0",
     "yaml-eslint-parser": "^1.1.0"
   },
   "devDependencies": {
-    "eslint": "^8.22.0"
+    "eslint": "^8.27.0"
   }
 }
