--- a/packages/eslint-plugin-vtrbo/package.json
+++ b/packages/eslint-plugin-vtrbo/package.json
@@ -1,6 +1,11 @@
 {
   "name": "eslint-plugin-vtrbo",
   "version": "0.0.7",
+  "description": "Victor Bo's Eslint Config",
+  "author": {
+    "name": "Victor Bo",
+    "email": "hi@vtrbo.cn"
+  },
   "license": "MIT",
   "homepage": "https://github.com/vtrbo/eslint-config",
   "main": "./dist/index.cjs",
@@ -13,14 +18,14 @@
     "build": "rimraf dist && unbuild",
     "stub": "unbuild --stub",
     "test": "vitest",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "nr build"
   },
   "dependencies": {
-    "@typescript-eslint/utils": "^5.33.0"
+    "@typescript-eslint/utils": "^5.43.0"
   },
   "devDependencies": {
-    "rimraf": "^3.0.2",
-    "unbuild": "^0.8.8",
-    "vitest": "^0.21.1"
+    "@types/node": "^18.11.9",
+    "unbuild": "^1.0.1",
+    "vitest": "^0.25.2"
   }
 }
