--- a/packages/react/package.json
+++ b/packages/react/package.json
@@ -1,8 +1,11 @@
 {
   "name": "@vtrbo/eslint-config-react",
   "version": "0.0.7",
-  "description": "",
-  "author": "Victor Bo<vtrbo.qq.com> (https://github.com/vtrbo)",
+  "description": "Victor Bo's Eslint Config",
+  "author": {
+    "name": "Victor Bo",
+    "email": "hi@vtrbo.cn"
+  },
   "license": "MIT",
   "homepage": "https://github.com/vtrbo/eslint-config",
   "keywords": [
@@ -15,13 +18,17 @@
   "scripts": {
     "lint": "eslint . --config=index.js"
   },
+  "peerDependencies": {
+    "eslint": ">=7.4.0"
+  },
   "dependencies": {
     "@vtrbo/eslint-config-ts": "workspace:*",
-    "eslint-plugin-react": "^7.30.1"
+    "eslint-plugin-react": "^7.31.10",
+    "eslint-plugin-react-hooks": "^4.6.0"
   },
   "devDependencies": {
-    "eslint": "^8.22.0",
+    "eslint": "^8.27.0",
     "react": "^18.2.0",
-    "typescript": "^4.7.4"
+    "typescript": "^4.9.3"
   }
 }
