--- a/packages/eslint-plugin-vtrbo/tsconfig.json
+++ b/packages/eslint-plugin-vtrbo/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "target": "ESNext",
     "module": "ESNext",
+    "moduleResolution": "Node",
     "lib": ["ESNext", "DOM"]
   }
 }
