--- a/package.json
+++ b/package.json
@@ -12,15 +12,17 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release": "bumpp -r && pnpm -r publish"
+    "release": "bumpp -r && pnpm -r publish",
+    "updeps": "taze -w -I",
+    "updeps:major": "taze major -I"
   },
   "devDependencies": {
     "@vtrbo/eslint-config": "workspace:*",
     "bumpp": "^9.1.0",
-    "eslint": "^8.38.0",
+    "eslint": "^8.39.0",
     "pnpm": "^8.3.1",
     "rimraf": "^5.0.0",
-    "taze": "^0.9.1",
+    "taze": "^0.9.2",
     "typescript": "^5.0.4"
   }
 }
