--- a/package.json
+++ b/package.json
@@ -12,14 +12,16 @@
   "scripts": {
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
-    "release": "bumpp -r && pnpm -r publish"
+    "release": "bumpp -r && pnpm -r publish",
+    "deps:major": "taze major -wri"
   },
   "devDependencies": {
     "@vtrbo/eslint-config": "workspace:*",
-    "bumpp": "^9.1.1",
-    "eslint": "^8.46.0",
-    "pnpm": "^8.6.10",
+    "bumpp": "^9.2.0",
+    "eslint": "^8.49.0",
+    "pnpm": "^8.7.4",
     "rimraf": "^5.0.1",
-    "typescript": "^5.1.6"
+    "taze": "^0.11.2",
+    "typescript": "^5.2.2"
   }
 }
