--- a/packages/eslint-config-basic/package.json
+++ b/packages/eslint-config-basic/package.json
@@ -22,14 +22,14 @@
     "eslint": ">=7.4.0"
   },
   "dependencies": {
-    "eslint-define-config": "^1.21.0",
-    "eslint-plugin-antfu": "^0.39.8",
+    "eslint-define-config": "^1.23.0",
+    "eslint-plugin-antfu": "^0.41.0",
     "eslint-plugin-eslint-comments": "^3.2.0",
     "eslint-plugin-html": "^7.1.0",
-    "eslint-plugin-import": "npm:eslint-plugin-i@2.27.5-4",
+    "eslint-plugin-import": "npm:eslint-plugin-i@2.28.1",
     "eslint-plugin-jsonc": "^2.9.0",
     "eslint-plugin-markdown": "^3.0.1",
-    "eslint-plugin-n": "^16.0.1",
+    "eslint-plugin-n": "^16.0.2",
     "eslint-plugin-no-only-tests": "^3.1.0",
     "eslint-plugin-promise": "^6.1.1",
     "eslint-plugin-unicorn": "^48.0.1",
@@ -39,6 +39,6 @@
     "yaml-eslint-parser": "^1.2.2"
   },
   "devDependencies": {
-    "eslint": "^8.46.0"
+    "eslint": "^8.49.0"
   }
 }
